--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     image: mongo:7.0.9
     container_name: artcreation_mongodb 
     ports:
-      - "8090:27017"
+      - "27017:27017"
     volumes:
       - mongodb_data:/data/db
     environment:
@@ -71,7 +71,8 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
 
-# Volumes nommés pour la persistance des données / utilité pour la sécurité (live Docker avec Nathan)
+
+# Volumes nommés pour la persistance des données / utilité pour la sécurité (live Docker avec Nathan)  ports:"8090:27017"
 volumes:
   db_data: # Volume pour stocker les données MySQL
   mongodb_data: # Volume pour MongoDB
