--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -2,8 +2,9 @@
 # Le type 'upstream' indique que cette route va pointer vers une application
 # Toutes les requêtes HTTPS sur le domaine principal sont envoyées à l'application 'art-creation' via HTTP
 "https://{default}/":
-  type: upstream
-  upstream: "art-creation:http"
+    type: upstream
+    upstream: "app:http"
+
 
 # Redirection de toutes les requêtes HTTPS vers le sous-domaine www vers le domaine sans www
 # Le type 'redirect' indique que c'est une redirection
