--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.6",
-        "mongodb/mongodb": "^1.17"
+        "vlucas/phpdotenv": "^5.6"
     }
 }
